--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@ body{
   margin:0px;
   padding:0px;
 	font-family: "Open Sans", arial;
-	background:#0f6d39;
-	color:#fff;
+	background:#1d221f;
+	color:rgb(27, 21, 21);
 	font-weight:300;
 }
 
